[project]
name = "100-streamlit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "django>=5.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "panda>=0.3.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "rich>=13.9.4",
    "ruff>=0.9.3",
    "seaborn>=0.13.2",
    "st-tailwind>=1.3.0",
    "streamlit>=1.41.1",
    "streamlit-option-menu>=0.4.0",
]
